# kaeri_chatbot

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
admin/: .prettierrc  dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
admin/src/: Layout.tsx  constants.ts  db.tsx  faq.tsx  index.css  main.tsx  setting.tsx
admin/src/components/: Sidebar.tsx
admin/src/dashboard/: QuestionChart.tsx  UserChart.tsx  index.tsx
admin/src/utils/: file.ts
database/: chunked_nuclear_safety_data.csv  config.py  dependencies.py  models.py  orm.py  padong_backup.sql  save_answer.py  user_queries.csv  view_user_queries.py
database/redis/appendonlydir/: appendonly.aof.1.base.rdb
init/: init.sql
routers/: dashboard.py  faq.py  kakao.py  langgraph_router.py  settings.py  vectordb.py
services/: LGanswer_generator.py  prompt.txt  vector_store.py
services/tools/: api_tool.py  prompt.txt  realtime_tools.py  vector_tool.py  web_tool.py
utils/: logger.py
